- Atualizado metatag de descrição - Atualizado cor padrão da metatag `theme-color`

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#111827" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="estude.dev - Aprenda a programar, explore novas tecnologias e impulsione sua carreira no mundo da programação. Transforme seu futuro através de código! Junte-se à nossa comunidade  e receba atualizações e conteúdo exclusivo."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>estude.dev | Aprenda programação de maneira divertida!</title>
